@@ -292,7 +292,7 @@ If you add this menu now to your app-hook::
 You get the static entries of :class:`MyAppMenu` and the dynamic entries of
 :class:`CategoryMenu` both attached to the same page.
 
-
+.. _multi_apphook:
 Attaching an Application multiple times
 ---------------------------------------
 
